--- a/python_crash_course.ipynb
+++ b/python_crash_course.ipynb
@@ -1,16 +1,83 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    " ### Variables and simple datatypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world!\n"
+     ]
+    }
+   ],
+   "source": [
+    "## A simple program to print hello world\n",
+    "\n",
+    "print(\"Hello world!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Hello Dennis Muisyo\n"
+     ]
+    }
+   ],
+   "source": [
+    "## A simple program to request user first name and last name and print full name\n",
+    "first_name = input(\"Enter your first name\\n\")\n",
+    "\n",
+    "last_name = input(\"Enter your last name\\n\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "full_name =f\"{first_name} {last_name}\"\n",
+    "\n",
+    "print(f\" Hello {full_name.title()}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "2d972ce83b011c0fbc8bf1befcdd55f31c9249b362a9ff124184ebc36a0909c1"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.2 64-bit",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.2"
   },
   "orig_nbformat": 4
  },
