--- a/python_crash_course.ipynb
+++ b/python_crash_course.ipynb
@@ -1327,13 +1327,426 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jen took the pool.\n",
+      "Sarah took the pool.\n",
+      "Edward took the pool.\n",
+      "Phil took the pool.\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "for name in favorite_languages.keys():\n",
     "    print(f\"{name.capitalize()} took the pool.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jen took the pool.\n",
+      "Sarah took the pool.\n",
+      "Edward took the pool.\n",
+      "Phil took the pool.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name in favorite_languages:\n",
+    "    print(f\"{name.capitalize()} took the pool.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C\n",
+      "Python\n",
+      "Ruby\n"
+     ]
+    }
+   ],
+   "source": [
+    "for language in set(favorite_languages.values()):\n",
+    "    print(language.title())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python\n",
+      "C\n",
+      "Ruby\n",
+      "Python\n"
+     ]
+    }
+   ],
+   "source": [
+    "for language in favorite_languages.values():\n",
+    "    print(language.title())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nestig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'color': 'green', 'points': 5}\n",
+      "{'color': 'yellow', 'points': 10}\n",
+      "{'color': 'red', 'points': 15}\n"
+     ]
+    }
+   ],
+   "source": [
+    "alien_0 = {'color': 'green', 'points': 5}\n",
+    "alien_1 = {'color': 'yellow', 'points': 10}\n",
+    "alien_2 = {'color': 'red', 'points': 15}\n",
+    "aliens = [alien_0, alien_1, alien_2]\n",
+    "\n",
+    "for alien in aliens:\n",
+    "    print(alien)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### USER INPUTS AND WHILE LOOPS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kenya\n"
+     ]
+    }
+   ],
+   "source": [
+    "message = input(\"Please enter something and I will repeat it to you :\")\n",
+    "print(message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      " Hello John\n"
+     ]
+    }
+   ],
+   "source": [
+    "name =input(\"Please enter your name\")\n",
+    "print(f\"\\n Hello {name}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are very short\n"
+     ]
+    }
+   ],
+   "source": [
+    "height = input(\"How tall are you , in inches ? :\")\n",
+    "height =int(height)\n",
+    "while height :\n",
+    "    if height < 10:\n",
+    "        print(\"You are very short\")\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"You are very tall\") \n",
+    "        break   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number 2 is even\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = input(\"Input a number and I will tell you if its odd or even\")\n",
+    "number=int(number)\n",
+    "\n",
+    "if (number % 2 ==0):\n",
+    "    print(f\"The number {number} is even\")\n",
+    "else:\n",
+    "    print(f\"The number {number} is odd\")    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The while loops in action"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "current_number = 1\n",
+    "\n",
+    "while current_number <= 5:\n",
+    "    print(current_number)\n",
+    "    current_number +=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "current_number = 0\n",
+    "\n",
+    "while current_number < 10:\n",
+    "    current_number +=1\n",
+    "    if current_number % 2 ==0:\n",
+    "        continue\n",
+    "    print(current_number)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Functions are named blocks of code which are designed  to do \n",
+    "a specific job"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello user welcome to our system\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def greet_user():\n",
+    "    \"\"\"This is a simple function that is used to greet a user\"\"\"\n",
+    "    print(\"Hello user welcome to our system\\n\")\n",
+    "\n",
+    "greet_user()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This is a simple function that is used to greet a user'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "greet_user.__doc__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function function.__dir__()>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "greet_user.__dir__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Passing information to a function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def greet_user(user_name):\n",
+    "    \"\"\"This is a simple function that is used to greet a user\n",
+    "       Parms: user_name(string)\n",
+    "       print Hello user_name welcome to our system\n",
+    "            \n",
+    "    \"\"\"\n",
+    "    print(f\"Hello, {user_name.title()} welcome to our system\\n\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello John welcome to our system\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_name = input(\"Enter your user name to login\")\n",
+    "\n",
+    "#call the greet_user function \n",
+    "greet_user(user_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "John\n"
+     ]
+    }
+   ],
+   "source": [
+    "name =\"john\"\n",
+    "print(f\"{name.capitalize()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello john welcome to our system\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "greet_user('john')"
    ]
   }
  ],
