create more code for class

--- a/python_crash_course.ipynb
+++ b/python_crash_course.ipynb
@@ -1971,9 +1971,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019 Audi A4 \n",
+      "This car has 0 miles on it. \n"
+     ]
+    }
+   ],
    "source": [
     "class Car:\n",
     "    \"\"\"A simple attempt to represent a car\"\"\"\n",
@@ -1995,7 +2004,382 @@
     "        print(f\"This car has {self.odometer_reading} miles on it. \")    \n",
     "\n",
     "my_new_car = Car('audi','a4',2019)\n",
-    "print(my_new_car.get_descriptive_name())"
+    "print(my_new_car.get_descriptive_name())\n",
+    "my_new_car.read_odometer()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Modifying Attribute Values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can change an attribute’s value in three ways: you can change the value\n",
+    "directly through an instance, set the value through a method, or increment\n",
+    "the value (add a certain amount to it) through a method. Let’s look at each\n",
+    "of these approaches."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Modifying an Attribute’s Value Directly"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The simplest way to modify the value of an attribute is to access the attribute\n",
+    "directly through an instance. Here we set the odometer reading to 23\n",
+    "directly:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This car has 23 miles on it. \n"
+     ]
+    }
+   ],
+   "source": [
+    "my_new_car.odometer_reading=23\n",
+    "my_new_car.read_odometer()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Modifying an Attribute’s Value Through a Method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It can be helpful to have methods that update certain attributes for you.\n",
+    "Instead of accessing the attribute directly, you pass the new value to a\n",
+    "method that handles the updating internally.\n",
+    "Here’s an example showing a method called update_odometer():"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019 Audi A4 \n",
+      "This car has 23 miles on it. \n"
+     ]
+    }
+   ],
+   "source": [
+    "class Car:\n",
+    "    \"\"\"A simple attempt to represent a car\"\"\"\n",
+    "    \n",
+    "    def __init__(self,make,model,year):\n",
+    "        \"\"\"Initialize attributes to describe a car\"\"\"\n",
+    "        self.make =make\n",
+    "        self.model =model\n",
+    "        self.year= year\n",
+    "        self.odometer_reading =0\n",
+    "\n",
+    "    def get_descriptive_name(self):\n",
+    "        \"\"\"Return a neatly formated discriptive name\"\"\"\n",
+    "        long_name =f\"{self.year} {self.make} {self.model} \"\n",
+    "        return long_name.title()\n",
+    "    def read_odometer(self):\n",
+    "        \"\"\"Print a statement showing the car's milleage\"\"\"\n",
+    "        print(f\"This car has {self.odometer_reading} miles on it. \")    \n",
+    "\n",
+    "   \n",
+    "        \n",
+    "    def update_odometer(self,mileage):\n",
+    "        \"\"\"Set the odometer reading to the given value\"\"\"\n",
+    "        self.odometer_reading =mileage\n",
+    "\n",
+    "my_new_car = Car('audi','a4',2019)\n",
+    "print(my_new_car.get_descriptive_name())\n",
+    "\n",
+    "my_new_car.update_odometer(23)\n",
+    "my_new_car.read_odometer()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can extend the method update_odometer() to do additional work\n",
+    "every time the odometer reading is modified. Let’s add a little logic to\n",
+    "make sure no one tries to roll back the odometer reading:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019 Audi A4 \n",
+      "This car has 100 miles on it. \n"
+     ]
+    }
+   ],
+   "source": [
+    "class Car:\n",
+    "    \"\"\"A simple attempt to represent a car\"\"\"\n",
+    "    \n",
+    "    def __init__(self,make,model,year):\n",
+    "        \"\"\"Initialize attributes to describe a car\"\"\"\n",
+    "        self.make =make\n",
+    "        self.model =model\n",
+    "        self.year= year\n",
+    "        self.odometer_reading =10\n",
+    "\n",
+    "    def get_descriptive_name(self):\n",
+    "        \"\"\"Return a neatly formated discriptive name\"\"\"\n",
+    "        long_name =f\"{self.year} {self.make} {self.model} \"\n",
+    "        return long_name.title()\n",
+    "\n",
+    "    def read_odometer(self):\n",
+    "        \"\"\"Print a statement showing the car's milleage\"\"\"\n",
+    "        print(f\"This car has {self.odometer_reading} miles on it. \")    \n",
+    "        \n",
+    "    def update_odometer(self,mileage):\n",
+    "        \"\"\"Set the odometer reading to the given value\n",
+    "           Reject the change if it tries to roll the odometer back\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        if mileage >= self.odometer_reading:\n",
+    "            self.odometer_reading =mileage\n",
+    "        else:\n",
+    "            print(\"You can't roll back an odometer!\")    \n",
+    "\n",
+    "my_new_car = Car('audi','a4',2019)\n",
+    "print(my_new_car.get_descriptive_name())\n",
+    "\n",
+    "my_new_car.update_odometer(100)\n",
+    "my_new_car.read_odometer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019 Audi A4 \n",
+      "You can't roll back an odometer!\n",
+      "This car has 10 miles on it. \n"
+     ]
+    }
+   ],
+   "source": [
+    "my_new_car = Car('audi','a4',2019)\n",
+    "print(my_new_car.get_descriptive_name())\n",
+    "\n",
+    "my_new_car.update_odometer(0)\n",
+    "my_new_car.read_odometer()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Incrementing an Attribute’s Value Through a Method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sometimes you’ll want to increment an attribute’s value by a certain\n",
+    "amount rather than set an entirely new value. Say we buy a used car and\n",
+    "put 100 miles on it between the time we buy it and the time we register it.\n",
+    "Here’s a method that allows us to pass this incremental amount and add\n",
+    "that value to the odometer reading:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2015 Subaru Outback \n",
+      "This car has 23500 miles on it. \n",
+      "This car has 23600 miles on it. \n"
+     ]
+    }
+   ],
+   "source": [
+    "class Car:\n",
+    "    \"\"\"A simple attempt to represent a car\"\"\"\n",
+    "    \n",
+    "    def __init__(self,make,model,year):\n",
+    "        \"\"\"Initialize attributes to describe a car\"\"\"\n",
+    "        self.make =make\n",
+    "        self.model =model\n",
+    "        self.year= year\n",
+    "        self.odometer_reading =10\n",
+    "\n",
+    "    def get_descriptive_name(self):\n",
+    "        \"\"\"Return a neatly formated discriptive name\"\"\"\n",
+    "        long_name =f\"{self.year} {self.make} {self.model} \"\n",
+    "        return long_name.title()\n",
+    "\n",
+    "    def read_odometer(self):\n",
+    "        \"\"\"Print a statement showing the car's milleage\"\"\"\n",
+    "        print(f\"This car has {self.odometer_reading} miles on it. \")    \n",
+    "        \n",
+    "    def update_odometer(self,mileage):\n",
+    "        \"\"\"Set the odometer reading to the given value\n",
+    "           Reject the change if it tries to roll the odometer back\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        if mileage >= self.odometer_reading:\n",
+    "            self.odometer_reading =mileage\n",
+    "        else:\n",
+    "            print(\"You can't roll back an odometer!\")   \n",
+    "\n",
+    "    def increment_odometer(self,miles):\n",
+    "        \"\"\"Add the given amount to the odometer reading\"\"\"  \n",
+    "        self.odometer_reading += miles       \n",
+    "\n",
+    "\n",
+    "\n",
+    "my_used_car = Car('subaru', 'outback', 2015)\n",
+    "\n",
+    "print(my_used_car.get_descriptive_name())\n",
+    "\n",
+    "my_used_car.update_odometer(23_500)\n",
+    "my_used_car.read_odometer()\n",
+    "my_used_car.increment_odometer(100)\n",
+    "my_used_car.read_odometer()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inheritance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You don’t always have to start from scratch when writing a class. If the class\n",
+    "you’re writing is a specialized version of another class you wrote, you can\n",
+    "use inheritance. When one class inherits from another, it takes on the attributes\n",
+    "and methods of the first class. The original class is called the parent\n",
+    "class, and the new class is the child class. The child class can inherit any\n",
+    "or all of the attributes and methods of its parent class, but it’s also free to\n",
+    "define new attributes and methods of its own."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The __init__() Method for a Child Class"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When you’re writing a new class based on an existing class, you’ll often\n",
+    "want to call the __init__() method from the parent class. This will initialize\n",
+    "any attributes that were defined in the parent __init__() method and make\n",
+    "them available in the child class.\n",
+    "As an example, let’s model an electric car. An electric car is just a specific\n",
+    "kind of car, so we can base our new ElectricCar class on the Car class\n",
+    "we wrote earlier. Then we’ll only have to write code for the attributes and\n",
+    "behavior specific to electric cars."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019 Tesla Model S \n"
+     ]
+    }
+   ],
+   "source": [
+    "class Car:\n",
+    "    \"\"\"A simple attempt to represent a car\"\"\"\n",
+    "    \n",
+    "    def __init__(self,make,model,year):\n",
+    "        \"\"\"Initialize attributes to describe a car\"\"\"\n",
+    "        self.make =make\n",
+    "        self.model =model\n",
+    "        self.year= year\n",
+    "        self.odometer_reading =10\n",
+    "\n",
+    "    def get_descriptive_name(self):\n",
+    "        \"\"\"Return a neatly formated discriptive name\"\"\"\n",
+    "        long_name =f\"{self.year} {self.make} {self.model} \"\n",
+    "        return long_name.title()\n",
+    "\n",
+    "    def read_odometer(self):\n",
+    "        \"\"\"Print a statement showing the car's milleage\"\"\"\n",
+    "        print(f\"This car has {self.odometer_reading} miles on it. \")    \n",
+    "        \n",
+    "    def update_odometer(self,mileage):\n",
+    "        \"\"\"Set the odometer reading to the given value\n",
+    "           Reject the change if it tries to roll the odometer back\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        if mileage >= self.odometer_reading:\n",
+    "            self.odometer_reading =mileage\n",
+    "        else:\n",
+    "            print(\"You can't roll back an odometer!\")   \n",
+    "\n",
+    "    def increment_odometer(self,miles):\n",
+    "        \"\"\"Add the given amount to the odometer reading\"\"\"  \n",
+    "        self.odometer_reading += miles \n",
+    "\n",
+    "class Electric_Car(Car):\n",
+    "    \"\"\"Represents aspects of a car, specific to electric cars\"\"\"\n",
+    "    def __init__(self,make,model,year):\n",
+    "        \"\"\"Initialize attributes of the parent class\"\"\"\n",
+    "        super().__init__(make,model,year)\n",
+    "\n",
+    "my_tesla=Electric_Car(\"tesla\",\"model s\",2019)\n",
+    "print(my_tesla.get_descriptive_name())"
    ]
   }
  ],
