--- a/python_crash_course.ipynb
+++ b/python_crash_course.ipynb
@@ -4,6 +4,160 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Python Lambda"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A lambda function is a small anonymous function.\n",
+    "\n",
+    "A lambda function can take any number of arguments, but can only have one expression."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Syntax"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "lambda arguments : expression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The expression is executed and the result is returned:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example\n",
+    "Add 10 to argument a, and return the result:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "x =lambda a : a+10\n",
+    "print(x(5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lambda functions can take any number of arguments:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example\n",
+    "Multiply argument a with argument b and return the result:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = lambda a,b :a *b\n",
+    "print(x(5,6))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example\n",
+    "Summarize argument a, b, and c and return the result:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60\n"
+     ]
+    }
+   ],
+   "source": [
+    "x =lambda a,b,c : a+b+c\n",
+    "print(x(10,20,30))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Why Use Lambda Functions?\n",
+    "The power of lambda is better shown when you use them as an anonymous function inside another function.\n",
+    "\n",
+    "Say you have a function definition that takes one argument, and that argument will be multiplied with an unknown number:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22\n"
+     ]
+    }
+   ],
+   "source": [
+    "def myfunc(n):\n",
+    "    return lambda a : n *a\n",
+    "\n",
+    "mydoubler=myfunc(2)\n",
+    "print(mydoubler(11))    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     " ### Variables and simple datatypes"
    ]
   },
