--- a/python_crash_course.ipynb
+++ b/python_crash_course.ipynb
@@ -2535,6 +2535,93 @@
     "my_tesla=Electric_Car(\"tesla\",\"model s\",2019)\n",
     "print(my_tesla.get_descriptive_name())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Defining Attributes and Methods for the Child Class"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Once you have a child class that inherits from a parent class, you can add\n",
+    "any new attributes and methods necessary to differentiate the child class\n",
+    "from the parent class.\n",
+    "Let’s add an attribute that’s specific to electric cars (a battery, for\n",
+    "example) and a method to report on this attribute. We’ll store the battery\n",
+    "size and write a method that prints a description of the battery:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019 Tesla Model S \n",
+      "This car has a 75-kwh battery \n"
+     ]
+    }
+   ],
+   "source": [
+    "class Car:\n",
+    "    \"\"\"A simple attempt to represent a car\"\"\"\n",
+    "    \n",
+    "    def __init__(self,make,model,year):\n",
+    "        \"\"\"Initialize attributes to describe a car\"\"\"\n",
+    "        self.make =make\n",
+    "        self.model =model\n",
+    "        self.year= year\n",
+    "        self.odometer_reading =10\n",
+    "\n",
+    "    def get_descriptive_name(self):\n",
+    "        \"\"\"Return a neatly formated discriptive name\"\"\"\n",
+    "        long_name =f\"{self.year} {self.make} {self.model} \"\n",
+    "        return long_name.title()\n",
+    "\n",
+    "    def read_odometer(self):\n",
+    "        \"\"\"Print a statement showing the car's milleage\"\"\"\n",
+    "        print(f\"This car has {self.odometer_reading} miles on it. \")    \n",
+    "        \n",
+    "    def update_odometer(self,mileage):\n",
+    "        \"\"\"Set the odometer reading to the given value\n",
+    "           Reject the change if it tries to roll the odometer back\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        if mileage >= self.odometer_reading:\n",
+    "            self.odometer_reading =mileage\n",
+    "        else:\n",
+    "            print(\"You can't roll back an odometer!\")   \n",
+    "\n",
+    "    def increment_odometer(self,miles):\n",
+    "        \"\"\"Add the given amount to the odometer reading\"\"\"  \n",
+    "        self.odometer_reading += miles \n",
+    "\n",
+    "class Electric_Car(Car):\n",
+    "    \"\"\"Represents aspects of a car, specific to electric cars\"\"\"\n",
+    "    def __init__(self,make,model,year):\n",
+    "        \"\"\"Initialize attributes of the parent class\n",
+    "           Then initialize attributes specific to an electric car.\n",
+    "        \"\"\"\n",
+    "        super().__init__(make,model,year)\n",
+    "        self.battery_size =75\n",
+    "\n",
+    "    def describe_battery(self):\n",
+    "        \"\"\"\n",
+    "            Print a statement describing the battery size\n",
+    "        \"\"\" \n",
+    "        print(f\"This car has a {self.battery_size}-kwh battery \")   \n",
+    "\n",
+    "my_tesla=Electric_Car(\"tesla\",\"model s\",2019)\n",
+    "print(my_tesla.get_descriptive_name())\n",
+    "my_tesla.describe_battery()"
+   ]
   }
  ],
  "metadata": {
