--- a/python_crash_course.ipynb
+++ b/python_crash_course.ipynb
@@ -2622,6 +2622,197 @@
     "print(my_tesla.get_descriptive_name())\n",
     "my_tesla.describe_battery()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Instances as Attributes\n",
+    ">> When modeling something from the real world in code, you may find that\n",
+    "you’re adding more and more detail to a class. You’ll find that you have a\n",
+    "growing list of attributes and methods and that your files are becoming\n",
+    "lengthy. In these situations, you might recognize that part of one class can\n",
+    "be written as a separate class. You can break your large class into smaller\n",
+    "classes that work together.\n",
+    "For example, if we continue adding detail to the ElectricCar class, we\n",
+    "might notice that we’re adding many attributes and methods specific to the car’s battery. When we see this happening, we can stop and move those\n",
+    "attributes and methods to a separate class called Battery. Then we can use a\n",
+    "Battery instance as an attribute in the ElectricCar class:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019 Tesla Model S \n",
+      "This car has a 75-kwh battery \n"
+     ]
+    }
+   ],
+   "source": [
+    "class Car:\n",
+    "    \"\"\"A simple attempt to represent a car\"\"\"\n",
+    "    \n",
+    "    def __init__(self,make,model,year):\n",
+    "        \"\"\"Initialize attributes to describe a car\"\"\"\n",
+    "        self.make =make\n",
+    "        self.model =model\n",
+    "        self.year= year\n",
+    "        self.odometer_reading =10\n",
+    "\n",
+    "    def get_descriptive_name(self):\n",
+    "        \"\"\"Return a neatly formated discriptive name\"\"\"\n",
+    "        long_name =f\"{self.year} {self.make} {self.model} \"\n",
+    "        return long_name.title()\n",
+    "\n",
+    "    def read_odometer(self):\n",
+    "        \"\"\"Print a statement showing the car's milleage\"\"\"\n",
+    "        print(f\"This car has {self.odometer_reading} miles on it. \")    \n",
+    "        \n",
+    "    def update_odometer(self,mileage):\n",
+    "        \"\"\"Set the odometer reading to the given value\n",
+    "           Reject the change if it tries to roll the odometer back\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        if mileage >= self.odometer_reading:\n",
+    "            self.odometer_reading =mileage\n",
+    "        else:\n",
+    "            print(\"You can't roll back an odometer!\")   \n",
+    "\n",
+    "    def increment_odometer(self,miles):\n",
+    "        \"\"\"Add the given amount to the odometer reading\"\"\"  \n",
+    "        self.odometer_reading += miles \n",
+    "\n",
+    "class Battery:\n",
+    "    \"\"\" A simple attempt to model a battery for an electric car.\"\"\"\n",
+    "\n",
+    "    def __init__(self,battery_size =75):\n",
+    "        \"\"\"Initialize the battery's attributes\"\"\"\n",
+    "        self.battery_size =battery_size\n",
+    "\n",
+    "    def describe_battery(self):\n",
+    "        \"\"\"\n",
+    "            Print a statement describing the battery size\n",
+    "        \"\"\" \n",
+    "        print(f\"This car has a {self.battery_size}-kwh battery \")      \n",
+    "\n",
+    "class Electric_Car(Car):\n",
+    "    \"\"\"Represents aspects of a car, specific to electric cars\"\"\"\n",
+    "    def __init__(self,make,model,year):\n",
+    "        \"\"\"Initialize attributes of the parent class\n",
+    "           Then initialize attributes specific to an electric car.\n",
+    "        \"\"\"\n",
+    "        super().__init__(make,model,year)\n",
+    "        self.battery =Battery()\n",
+    "\n",
+    "     \n",
+    "\n",
+    "my_tesla=Electric_Car(\"tesla\",\"model s\",2019)\n",
+    "print(my_tesla.get_descriptive_name())\n",
+    "my_tesla.battery.describe_battery()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">This looks like a lot of extra work, but now we can describe the battery\n",
+    "in as much detail as we want without cluttering the ElectricCar class. Let’s\n",
+    "add another method to Battery that reports the range of the car based on\n",
+    "the battery size:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019 Tesla Model S \n",
+      "This car has a 75-kwh battery \n",
+      "This car can go about 260 miles on a full charge. \n"
+     ]
+    }
+   ],
+   "source": [
+    "class Car:\n",
+    "    \"\"\"A simple attempt to represent a car\"\"\"\n",
+    "    \n",
+    "    def __init__(self,make,model,year):\n",
+    "        \"\"\"Initialize attributes to describe a car\"\"\"\n",
+    "        self.make =make\n",
+    "        self.model =model\n",
+    "        self.year= year\n",
+    "        self.odometer_reading =10\n",
+    "\n",
+    "    def get_descriptive_name(self):\n",
+    "        \"\"\"Return a neatly formated discriptive name\"\"\"\n",
+    "        long_name =f\"{self.year} {self.make} {self.model} \"\n",
+    "        return long_name.title()\n",
+    "\n",
+    "    def read_odometer(self):\n",
+    "        \"\"\"Print a statement showing the car's milleage\"\"\"\n",
+    "        print(f\"This car has {self.odometer_reading} miles on it. \")    \n",
+    "        \n",
+    "    def update_odometer(self,mileage):\n",
+    "        \"\"\"Set the odometer reading to the given value\n",
+    "           Reject the change if it tries to roll the odometer back\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        if mileage >= self.odometer_reading:\n",
+    "            self.odometer_reading =mileage\n",
+    "        else:\n",
+    "            print(\"You can't roll back an odometer!\")   \n",
+    "\n",
+    "    def increment_odometer(self,miles):\n",
+    "        \"\"\"Add the given amount to the odometer reading\"\"\"  \n",
+    "        self.odometer_reading += miles \n",
+    "\n",
+    "class Battery:\n",
+    "    \"\"\" A simple attempt to model a battery for an electric car.\"\"\"\n",
+    "\n",
+    "    def __init__(self,battery_size =75):\n",
+    "        \"\"\"Initialize the battery's attributes\"\"\"\n",
+    "        self.battery_size =battery_size\n",
+    "\n",
+    "    def describe_battery(self):\n",
+    "        \"\"\"\n",
+    "            Print a statement describing the battery size\n",
+    "        \"\"\" \n",
+    "        print(f\"This car has a {self.battery_size}-kwh battery \")      \n",
+    "\n",
+    "    def get_range(self):\n",
+    "        \"\"\"Print a statement about the range this battery provides\"\"\"\n",
+    "        if self.battery_size==75:\n",
+    "            range =260\n",
+    "        elif self.battery_size==100:\n",
+    "            range =315    \n",
+    "        print(f\"This car can go about {range} miles on a full charge. \")\n",
+    "\n",
+    "class Electric_Car(Car):\n",
+    "    \"\"\"Represents aspects of a car, specific to electric cars\"\"\"\n",
+    "    def __init__(self,make,model,year):\n",
+    "        \"\"\"Initialize attributes of the parent class\n",
+    "           Then initialize attributes specific to an electric car.\n",
+    "        \"\"\"\n",
+    "        super().__init__(make,model,year)\n",
+    "        self.battery =Battery()\n",
+    "\n",
+    "     \n",
+    "\n",
+    "my_tesla=Electric_Car(\"tesla\",\"model s\",2019)\n",
+    "print(my_tesla.get_descriptive_name())\n",
+    "my_tesla.battery.describe_battery()\n",
+    "my_tesla.battery.get_range()"
+   ]
   }
  ],
  "metadata": {
