finalized with classes

--- a/python_crash_course.ipynb
+++ b/python_crash_course.ipynb
@@ -2813,6 +2813,83 @@
     "my_tesla.battery.describe_battery()\n",
     "my_tesla.battery.get_range()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The Python Standard Library\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> The Python standard library is a set of modules included with every Python\n",
+    "installation. Now that you have a basic understanding of how functions and\n",
+    "classes work, you can start to use modules like these that other programmers\n",
+    "have written. You can use any function or class in the standard library\n",
+    "by including a simple import statement at the top of your file. Let’s look\n",
+    "at one module, random, which can be useful in modeling many real-world\n",
+    "situations.\n",
+    "One interesting function from the random module is randint(). This\n",
+    "function takes two integer arguments and returns a randomly selected integer\n",
+    "between (and including) those numbers.\n",
+    "Here’s how to generate a random number between 1 and 6:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from random import randint\n",
+    "randint(1,6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">Another useful function is choice(). This function takes in a list or tuple\n",
+    "and returns a randomly chosen element:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'charles'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from random import choice\n",
+    "\n",
+    "players = ['charles','martina','michael','florence','eli']\n",
+    "first_up =choice(players)\n",
+    "first_up"
+   ]
   }
  ],
  "metadata": {
